Fixes issue #19